docs: improve example of kickstart files
Improve kickstart files by having
them shorter and more readable
with fewer lines.

Signed-off-by: Ben Oukhanov <boukhanov@redhat.com>

--- a/examples/builder/kubevirt-iso/fedora/ks.cfg
+++ b/examples/builder/kubevirt-iso/fedora/ks.cfg
@@ -1,72 +1,30 @@
-# Installation source
-url --url="https://fedora.cu.be/linux/releases/42/Server/x86_64/os"
-
-# Disable graphical setup
+cdrom
 text
 firstboot --disable
-
-# Language, keyboard, and timezone
 lang en_US.UTF-8
 keyboard us
 timezone Europe/Paris --utc
-
-# Network configuration
-network --bootproto=dhcp --device=eth0 --ipv6=auto --activate
-network --hostname=fedora42.localdomain
-
-# SELinux
-selinux --disabled
-
-# Root password
+selinux --enforcing
 rootpw root
-
-# Create user
+firewall --enabled --ssh
+network --bootproto dhcp
 user --groups=wheel --name=user --password=root --uid=1000 --gecos="user" --gid=1000
 
-# SSH keys
-sshkey --username=user "ssh-rsa AAAAB3... packer-kvm-default-key"
-sshkey --username=root "ssh-rsa AAAAB3... packer-kvm-default-key"
-
-# Bootloader and kernel options
 bootloader --location=mbr --append="net.ifnames=0 biosdevname=0 crashkernel=no"
 
-# Disk setup
 zerombr
 clearpart --all --initlabel
 autopart --type=lvm
 
-# Power off after install
 poweroff
 
-# Packages
 %packages --excludedocs
-sudo
+@core
 qemu-guest-agent
 openssh-server
--kexec-tools
--dracut-config-rescue
--plymouth*
--iwl*firmware
 %end
 
-# Kdump
-%addon com_redhat_kdump --disable
-%end
-
-# Post-install configuration
 %post
-# Remove boot splash and enable root SSH login
-sed -i 's/rhgb //' /etc/default/grub
-sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
-
-# Configure passwordless sudo
-cat <<EOF >> /etc/sudoers
-Defaults !requiretty
-root ALL=(ALL) ALL
-user ALL=(ALL) NOPASSWD: ALL
-EOF
-
-# Enable services
 systemctl enable --now sshd
 systemctl enable --now qemu-guest-agent
 %end
